--- a/pom.xml
+++ b/pom.xml
@@ -55,13 +55,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				 <version>3.1.0</version>
+				<version>3.1.0</version>
 				<configuration>
 					<archive>
 						<manifest>
 							<mainClass>Core.Main</mainClass>
 						</manifest>
 					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 			</plugin>
 			<plugin>
