--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
 						<manifest>
 							<addClasspath>true</addClasspath>
 							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>Core.Main</mainClass>
+							<mainClass>core.Main</mainClass>
 						</manifest>
 					</archive>
 				</configuration>
