--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,7 @@ after_failure:
   - wget https://raw.githubusercontent.com/k3rn31p4nic/travis-ci-discord-webhook/master/send.sh
   - chmod +x send.sh
   - ./send.sh failure $WEBHOOK_URL
+notifications:
+  email:
+    on_success: change
+    on_failure: always
